Finally updated all the dependencies and removed testing, because f that. note to self: remove flags in gradle.properties when stable newdsl and so on